Fixed wrapping issue on radio items

--- a/apps/mobile-mzima-client/src/app/shared/components/radio/radio.component.scss
+++ b/apps/mobile-mzima-client/src/app/shared/components/radio/radio.component.scss
@@ -56,11 +56,14 @@
     .radio-item {
       --border-width: 0;
       --min-height: 40px;
+      .radio {
+      }
     }
   }
 }
 
 .radio {
+  white-space: normal;
   --color: var(--ion-color-medium);
   --color-checked: var(--color-primary-50);
 
@@ -68,6 +71,10 @@
     width: 20px;
     height: 20px;
     //margin: 10px 18px 10px 10px;
+  }
+
+  .radio-item-wrap {
+    white-space: normal;
   }
 
   &::ng-deep {
